--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -265,93 +265,93 @@ At full capacity, these turbines were able to provide clean electricity for 31,0
 Secret Laboratory = Laboratorio Secreto
 Open the Vault = Abrir la Bóveda
 And I seal up these records, after I have spoken a few words by way of exhortation unto you. = Y ahora sello estos regristros, después de haberte dado unas palabras por medio de la exortación.
-Town Hall =
-Personnel Office =
-Slave Market =
-Casino =
-Plantation =
-Museum =
-Broadcast Tower =
-Television Studio =
-Broadcast Network =
-Distillery =
-Caravan Office =
-Water Plant =
-Water Storage =
-Greywater Treatment Plant =
-Rainwater Purifier =
-Food Store =
-Deep Larder =
-Cold Store =
-Municipal Water =
-Greenhouse =
-Hydroponic Farming =
-Organ Farm =
-Organ Lab =
-Mycoprotein Vats =
-Reclaimation Vats =
-Blood Bank =
-Mosque =
-Domestic Electrification =
-Information Market =
-Study =
-Sanctum =
-Trade College =
-College of Rhetoric =
-College of Mystics =
-Private School =
-Grammar School =
-Initiate School =
-Data Center =
-Media Center =
-Decryption Center =
-Supercollider =
-Communications Satellite =
-Surveillance Satellite =
-Satnav Network =
-Surveillance Satellite =
-Defensive Emplacements =
-Active Denial System =
-Arena =
-Prison Camp =
-Listening Post =
-Black Site =
-Processing Center =
-Legion Camp =
-Guerilla Camp =
-Narcotics Refinery =
-Aerospace Facility =
-Salvage Yard =
-Salvage Exchange =
-Chop Shop =
-Blast Furnace =
-Fuel Depot =
-Oil Plant =
-Oil Refinery =
-Biofuel Refinery =
-Hydro Plant =
-Tidal Plant =
-Coal Plant =
-Nuclear Plant =
-Desalination Plant =
-Aluminum Smelter =
-Urine Recycler =
-Automated Factory =
-Work Camp =
-Refugee Center =
-Plastics Factory =
-Plastics Reprocessor =
-Metal Reprocessor =
-Uranium Centrifuge =
-Carbon Capture =
-Carbon Recapture =
-Fusion Reactor =
-AI Project =
-Arcology Project =
-Arcology Food =
-Arcology Dome =
-Arcology Reprocessor =
-Cryo Sanctum =
+Town Hall = Ayuntamiento
+Personnel Office = Oficina de Personal
+Slave Market = Mercado de Esclavos
+Casino = Casino
+Plantation = Plantación
+Museum = Museo
+Broadcast Tower = Torre de Transmisión
+Television Studio = Estudio de Televisión
+Broadcast Network = Red de Transmisión
+Distillery = Distilería
+Caravan Office = Oficina de Caravana
+Water Plant = Planta de Agua
+Water Storage = Almacén de Agua
+Greywater Treatment Plant = Planta de Tratamiento de Aguas-Turbias
+Rainwater Purifier = Purificador de Agua de Lluvia
+Food Store = Almacén de Comida
+Deep Larder = Alacena Profunda
+Cold Store = Almecén Nevera
+Municipal Water = Agua Municipal
+Greenhouse = Invernadero
+Hydroponic Farming = Cultivos Hidropónicos
+Organ Farm = Granja de Organos
+Organ Lab = Laboratorio de Organos
+Mycoprotein Vats = Cubos de Micoproteína
+Reclaimation Vats = Reclamar Cubos
+Blood Bank = Banco de Sangre
+Mosque = Mezquita
+Domestic Electrification = Electricidad Doméstica
+Information Market = Mercado de Información
+Study = Estudio
+Sanctum = Santuario
+Trade College = Instituto de Mercado
+College of Rhetoric = Instituto de Retorica
+College of Mystics = Instituto de Mística
+Private School = Escuela Privada
+Grammar School = Escuela de Gramática
+Initiate School = Escuela Inicial
+Data Center = Centro de Datos
+Media Center = Centro de Medios
+Decryption Center = Centro de Encriptado
+Supercollider = Super-colisionador
+Communications Satellite = Satélite de Comunicaciones
+Surveillance Satellite = Satélite de Vigilancia
+Satnav Network = Red Satnav
+Surveillance Satellite = 
+Defensive Emplacements = Posiciones Defensivas
+Active Denial System = Sistema Denegatorio Activo
+Arena = Arena
+Prison Camp = Campo de Prisión
+Listening Post = Puesto de Escucha
+Black Site = Lugar Osscuro
+Processing Center = Centro de Procesamiento
+Legion Camp = Campo Legionario
+Guerilla Camp = Campo de Guerrilla
+Narcotics Refinery = Refinería de Narcoticos
+Aerospace Facility = Facilidad Aeronautica
+Salvage Yard = Reparar Patio
+Salvage Exchange = Restaurar Canjeos
+Chop Shop = Tienda de Corte
+Blast Furnace = Alto Horno
+Fuel Depot = Depósito de Gasolina
+Oil Plant = Planta de Petróleo
+Oil Refinery = Refinería de Petróleo
+Biofuel Refinery = Refinería de Biocombustible
+Hydro Plant = Planta Hidroelectrica
+Tidal Plant = Planta de Marea
+Coal Plant = Planta de Carbón
+Nuclear Plant = Planta Nuclear
+Desalination Plant = Planta de Desalinización
+Aluminum Smelter = Fundidora de Aluminio
+Urine Recycler = Reciclador de Urina
+Automated Factory = Fábrica Automatizada
+Work Camp = Campo de Trabajo
+Refugee Center = Centro de Refugiados
+Plastics Factory = Fábrica de Plásticos
+Plastics Reprocessor = Reprocesador de Plásticos
+Metal Reprocessor = Reprocesador de Metal
+Uranium Centrifuge = Centrifugador de Uranio
+Carbon Capture = Captura de Carbón
+Carbon Recapture = Recaptura de Carbón
+Fusion Reactor = Reactor de Fusión
+AI Project = Proyecto IA
+Arcology Project = Proyecto A
+Arcology Food = Comida Arcológica
+Arcology Dome = Domo Arcológico
+Arcology Reprocessor = Reprocesador Arcológica
+Cryo Sanctum = Santuario Criogénico
 Cryo Vault A =
 Cryo Vault B =
 Cryo Vault C =
@@ -403,8 +403,8 @@ Ground Control Center =
 Survey Center =
 Operations Center =
 
-Fish Farm =
-Seastead =
+Fish Farm = Piscifactorías
+Seastead = 
 Shrine = 
 Ocean Seeder =
 Monastery =
