--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -70,7 +70,7 @@ Armor Plating = 附加装甲
 Evasive Maneuvers = 规避
 Thermoptic Camouflage = 电热匿踪装备
 Assault = 突击
-Headhunter = 猎头者
+Headhunter = 爆头者
 
 # Resources
 Algae = 海藻
@@ -295,10 +295,10 @@ Stockpile = 储藏库
 Ark One = 方舟一号
 Atlas Refuge = 总避难所
 Eagle Rock Complex = 鹰岩山要塞
-Peace Memorial =
-Longhouse =
-The Great Lighthouse =
-Great Mosque =
+Peace Memorial = 和平碑
+Longhouse = 长屋（议事厅）
+The Great Lighthouse = 大灯塔
+Great Mosque = 麦加大清真寺
 Clan Hideout =
 Forum = 论坛
 Congress = 议事会
@@ -323,15 +323,13 @@ SS Stasis Chamber =  // Atmosphere Processor
 Search for Survivors = 生还者搜索
 Slaver Guild = 奴役公会
 Conscript Survivors = 生还者圣召会
-Manhattan Project =
-Satnav Network =
+Manhattan Project = 曼哈顿计划
+Satnav Network = 卫星导航系统
 Cryo Sanctum =
-Skunkworks =
-Supercollider =
-AI Project =
-Salvage Tank Depot =
-Salvage Bomber =
-Salvage Helicopter =
+Skunkworks = 小型研发基地
+Supercollider = 超级对撞机
+#not a good translation
+AI Project = AI项目
 Search Shelters = 广泛性城区搜索
 Public Broadcast = 公共广播频道
 Ally with Isolationists = 离岛联盟条约
@@ -339,7 +337,7 @@ Annex Isolationists = 离岛吞并条约
 Faust Project = 铁拳计划
 Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... = 
 Nuclear Waste Museum = 核废料收藏馆
-Secret Laboratory =
+Secret Laboratory = 秘密实验室
 
 Excavate Nuclear Waste = 开发核废料
 Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. = 
@@ -351,18 +349,18 @@ Produce Soft Drinks = 重新启动饮料工厂
 Salvage Army Depot = 回收军需品
 Oh, see the fire is sweepin, our very street today; burns like a red coat carpet, mad bull lost your way.. War, children! It's just a shot away!"  = 
 Salvage Graveyard = 回收旧船残骸
-He who commands the sea has command of everything. =
+He who commands the sea has command of everything. = 得海者，得天下！
 Turbine Hall = 水力发电涡轮机房
-At full capacity, these turbines were able to provide clean electricity for 31,052 homes, offsetting up to 51,997 tons of CO2 each year. =
-Open the Vault =
+At full capacity, these turbines were able to provide clean electricity for 31,052 homes, offsetting up to 51,997 tons of CO2 each year. = 在满负荷运转时，这些涡轮机能够为31,052户家庭提供清洁的电力，每年减排高达51,997吨的二氧化碳。
+Open the Vault = 
 And I seal up these records, after I have spoken a few words by way of exhortation unto you. =
 Secret Laboratory = 秘密实验室
 Town Hall = 市政厅
 Personnel Office = 人力资源办公室
 Slave Market = 奴隶拍卖场
 Casino = 赌场
-Plantation =
-Museum =
+Plantation = 种植园
+Museum = 博物馆
 Broadcast Tower =
 Television Studio = 电视摄影棚
 Broadcast Network = 电视广播网络
@@ -370,8 +368,8 @@ Distillery = 酿酒厂
 Caravan Office = 外贸办公室
 Water Plant = 净水厂
 Water Storage = 水库
-Greywater Treatment Plant =
-Rainwater Purifier =
+Greywater Treatment Plant = 污水处理厂
+Rainwater Purifier = 雨水净化厂
 Deep Larder = 地下粮仓
 Food Store = 粮库
 Cold Store = 冷藏库
@@ -383,7 +381,7 @@ Organ Lab = 器官培植实验室
 Mycoprotein Vats = 霉菌蛋白培养厂
 Reclaimation Vats = 食物回收厂
 Blood Bank = 血库
-Mosque =
+Mosque = 清真寺
 Domestic Electrification = 大众电气化
 Information Market = 情报市集
 Study = 学者厅
@@ -417,26 +415,26 @@ Salvage Exchange = 废料贸易场
 Chop Shop = 拆车场
 Blast Furnace = 高炉
 Fuel Depot = 储油库
-Oil Plant =
-Oil Refinery = 炼油厂
+Oil Plant = 炼油厂
+Oil Refinery = 石精炼厂
 Biofuel Refinery = 生物燃料精炼厂
-Hydro Plant =
+Hydro Plant = 水电站
 Tidal Plant = 潮汐发电厂
 Coal Plant = 燃煤发电厂
-Nuclear Plant =
+Nuclear Plant = 核电站
 Aluminum Smelter = 炼铝溶炉
 Desalination Plant = 海水净化厂
-Urine Recycler =
+Urine Recycler = 尿液处理厂
 Automated Factory = 自动工厂
 Work Camp = 奴隶工作营
 Refugee Center = 难民收容中心
 Plastics Factory = 塑胶工厂
 Plastics Reprocessor = 塑胶回收厂
-Metal Reprocessor =
-Uranium Centrifuge =
+Metal Reprocessor = 金属回收厂
+Uranium Centrifuge = 铀离心机
 Carbon Capture = 碳捕集
 Carbon Recapture = 二次碳捕集
-Fusion Reactor =
+Fusion Reactor = 聚变反应堆
 AI Project = 人工智能计划
 Arcology Project = 生态建筑工程计划
 Arcology Food = 生态建筑•室内农场
@@ -451,9 +449,9 @@ Cryo Bunker = 冰眠库•庇护所地堡
 Fish Farm = 养鱼场
 Ocean Seeder = 海洋生态重建
 Archive of the Arts = 古艺术档案馆
-Nuclear Storage =
-Devil's Nuclear Plant =
-Paradise Alley =
+Nuclear Storage = 核能存储区
+Devil's Nuclear Plant = 恶魔核电站
+Paradise Alley = 天堂巷
 Encylopedia = 百科档案馆
 The Abbey = 大修道院
 Alma Army Depot = 阿木拉图军火库
@@ -462,29 +460,29 @@ Chemical Weapons Laboratory = 生化武器实验室
 Homestead = 家园
 Silk Road = 丝绸之路
 Divine Knowledge = 圣学全书
-Arroyo =
-Ghost Mountain =
+Arroyo = 土崖部落
+Ghost Mountain = 幽灵山
 Traditional Farming Methods = 传统农业
 Alma Air Base = 阿木拉图空军基地
 Alma Tank Depot = 阿木拉图坦克库
-Hub Monument =
+Hub Monument = 
 Trader's Hub = 交易枢纽
-Hub Notfactory =
+Hub Notfactory = 
 Hub Work Camp =
-Mormon Monument =
-Grand Temple =
-Iron Rod Monument =
-Iron Rod Stockpile =
-Arden Monument =
-Land Value Tax =
-Salvage Tank Depot = 回收坦克
-Salvage Bomber = 回收轰炸机
-Salvage Helicopter = 回收直升机
+Mormon Monument = 
+Grand Temple = 大神庙
+Iron Rod Monument = 钢锈纪念碑
+Iron Rod Stockpile = 钢锈仓储
+Arden Monument = 
+Land Value Tax = 地价税
+Salvage Tank Depot = 回收废弃坦克
+Salvage Bomber = 回收废弃轰炸机
+Salvage Helicopter = 回收废弃直升机
 Alma Oil Depot = 阿木拉图燃料库
 Hardened Defenses = 强化城墙
 Choke Points = 咽喉点防御
-Hardened Defenses =
-Active Denial System =
+Hardened Defenses = 防御硬化
+Active Denial System = 主动防御系统
 Bunker = 碉堡
 Battery = 城防炮台
 Machinery Production Line = 机械组装线
@@ -496,15 +494,16 @@ Ground Control Center = 无人机地勤总部
 Survey Center = 勘查员总部
 Operations Center = 行动总部
 
-Fish Farm =
-Seastead =
-Shrine = 
+Fish Farm = 养鱼场
+Seastead = 海上家园（在任何国家管辖范围之外的海域建造的永久住宅）
+Shrine = 神殿
 Ocean Seeder =
-Monastery =
-Pyramid =
-Garden =
-Holy Fortress =
-Altar of Ignis =
+Monastery = 修道院
+Pyramid = 金字塔
+Garden = 花园
+Holy Fortress = 神圣碉堡
+Altar of Ignis = 圣火祭坛
+
 # Policies
 Adaptation = 适应政策
 Castle Doctrine = 城堡教条
