Restructured and reordered UnitPromotions.json
Also updated template translation keys

--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,56 +1,92 @@
 #################### Deciv items ####################
 # Promotions
+Entrench = 참호
+Forage = 회수
+Skirmish = 산병전
+Shock = 충격
+Loose Formation = 산개 대형
+Hull Down = 헐 다운
 Urban Warfare I = 시가전 I
 Urban Warfare II = 시가전 II
 Guerilla Warfare I = 유격전 I
 Guerilla Warfare II = 유격전 II
-Entrench = 참호
-Forage = 먹이사냥
-Concealment = 은닉
-Loose Formation = 진형 상실
-Ambush = 매복
-Formation = 진형
-Sabotage = 사보타지
-Precision = 정밀
-Skirmish = 소규모 접전
-Combat Analytics = 전투 분석
-Care Package = 구호 패키지
-Point Defense Laser = 지점 방어 레이저
-Gas Mask = 방독면
-Nomad = 유랑민
-Mobility I = 기동성 I
-Mobility II = 기동성 II
-Mobility III = 기동성 III
-Shock = 충격
-Pursuit = 추격
-Maneuver = 작전 행동
-Hull Down = 헐 다운
-Awe = 잔혹함
-Resupply = 재보급
-Suppression = 억압
-Flexibility = 유연성
-Defense in Depth = 심층 방어
 Accuracy = 정확성
 Combat Drill = 전투 훈련
+Evasion = 회피
+Strike =
+Bombardment =
+Targeting =
+Armor Plating =
+Flight Deck I =
+Flight Deck II =
+Flight Deck III =
+Wolfpack I =
+Wolfpack II =
+Wolfpack III =
+Siege I = 공성 I
+Siege II = 공성 II
+Siege III = 공성 III
+Interception I = 요격 I
+Interception II = 요격 II
+Interception III = 요격 III
+Reconnaissance I = 정찰 I
+Reconnaissance II = 정찰 II
+Reconnaissance III = 정찰 III
+Smokescreen =
+Assault =
+Pursuit = 추격
+Awe = 잔혹함
+Maneuver = 작전 행동
+Formation = 대형
+Ambush = 매복
+Precision = 정밀
+Suppression = 억압
+Barrage = 탄막 가스
+Resupply = 재보급
+Mobility = 기동성
+Littoral Warfare =
+Exploit Weakness =
+Damage Control =
+Close-In Weapons System =
+Flank Speed =
+Convoy =
+Sentry =
+Blitz =
+March =
+Extended Range =
+Operational Range =
+Sortie =
+Evasive Maneuvers =
+Air Repair =
+Logistics =
+Medic I = 의무병 I
+Medic II = 의무병 II
 Drone Recon = 드론 정찰
 Drone Support = 드론 지원
-Mortar = 박격포
+Care Package = 위문품
 Infantry Mortar = 보병 박격포
 White Phosphorus Munitions = 백린탄
 Antipersonnel Mines = 대인 지뢰
 Antitank Missile = 대전차 지뢰
+Surface-to-Air Missile = 지대공 미사일
 Cluster Munitions = 집속탄
+Napalm = 네이팜
 Antiship Missile = 대함 미사일
 Air-to-Air Missile = 공대공 미사일
 Infantry Weapons = 보병 무기
+Artillery =
 Advanced Weapons = 고급 무기
-Chemical Weapons = 화학 무기
-Napalm = 네이팜
-Martyrdom = 순교
-Hazard Pay = 위험 급여
+Automated =
 Tear Gas = 최루 가스
-Barrage = 탄막 가스
-Surface-to-Air Missile = 지대공 미사일
+Chemical Weapons = 화학 무기
+Point Defense Laser = 국지 방어 레이저
+Rejuvenation =
+Amphibious =
+Gas Mask = 방독면
+Headhunter =
+Raider =
+Clansman =
+Hazard =
 
 # Resources
 Algae = 조류
@@ -226,10 +262,14 @@ Consulate =
 War Council = 전쟁 의회
 Seer Council =
 Biosphere Project =
-SS Booster =  // Solar Shade
-SS Cockpit =  // Command Center
-SS Engine =  // Ocean Processor
-SS Stasis Chamber =  // Atmosphere Processor
+# Solar Shade
+SS Booster =
+# Command Center
+SS Cockpit =
+# Ocean Processor
+SS Engine =
+# Atmosphere Processor
+SS Stasis Chamber =
 Search for Survivors =
 Slaver Guild =
 Conscript Survivors =
