--- a/jsons/translations/Template.properties
+++ b/jsons/translations/Template.properties
@@ -1,56 +1,92 @@
 #################### Deciv items ####################
 # Promotions
+Entrench =
+Forage =
+Skirmish =
+Shock =
+Loose Formation =
+Hull Down =
 Urban Warfare I =
 Urban Warfare II =
 Guerilla Warfare I =
 Guerilla Warfare II =
-Entrench =
-Forage =
-Concealment =
-Loose Formation =
-Ambush =
-Formation =
-Sabotage =
-Precision =
-Skirmish =
-Combat Analytics =
-Care Package =
-Point Defense Laser =
-Gas Mask =
-Nomad =
-Mobility I =
-Mobility II =
-Mobility III =
-Shock =
-Pursuit =
-Maneuver =
-Hull Down =
-Awe =
-Resupply =
-Suppression =
-Flexibility =
-Defense in Depth =
 Accuracy =
 Combat Drill =
+Evasion =
+Strike =
+Bombardment =
+Targeting =
+Armor Plating =
+Flight Deck I =
+Flight Deck II =
+Flight Deck III =
+Wolfpack I =
+Wolfpack II =
+Wolfpack III =
+Siege I =
+Siege II =
+Siege III =
+Interception I =
+Interception II =
+Interception III =
+Reconnaissance I =
+Reconnaissance II =
+Reconnaissance III =
+Smokescreen =
+Assault =
+Pursuit =
+Awe =
+Maneuver =
+Formation =
+Ambush =
+Precision =
+Suppression =
+Barrage =
+Resupply =
+Mobility =
+Littoral Warfare =
+Exploit Weakness =
+Damage Control =
+Close-In Weapons System =
+Flank Speed =
+Convoy =
+Sentry =
+Blitz =
+March =
+Extended Range =
+Operational Range =
+Sortie =
+Evasive Maneuvers =
+Air Repair =
+Logistics =
+Medic I =
+Medic II =
 Drone Recon =
 Drone Support =
-Mortar =
+Care Package =
 Infantry Mortar =
 White Phosphorus Munitions =
 Antipersonnel Mines =
 Antitank Missile =
+Surface-to-Air Missile =
 Cluster Munitions =
+Napalm =
 Antiship Missile =
 Air-to-Air Missile =
 Infantry Weapons =
+Artillery =
 Advanced Weapons =
-Chemical Weapons =
-Napalm =
-Martyrdom =
-Hazard Pay =
+Automated =
 Tear Gas =
-Barrage =
-Surface-to-Air Missile =
+Chemical Weapons =
+Point Defense Laser =
+Rejuvenation =
+Amphibious =
+Gas Mask =
+Headhunter =
+Raider =
+Clansman =
+Hazard =
 
 # Resources
 Algae =
@@ -226,10 +262,14 @@ Consulate =
 War Council =
 Seer Council =
 Biosphere Project =
-SS Booster =  // Solar Shade
-SS Cockpit =  // Command Center
-SS Engine =  // Ocean Processor
-SS Stasis Chamber =  // Atmosphere Processor
+# Solar Shade
+SS Booster =
+# Command Center
+SS Cockpit =
+# Ocean Processor
+SS Engine =
+# Atmosphere Processor
+SS Stasis Chamber =
 Search for Survivors =
 Slaver Guild =
 Conscript Survivors =
