--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,28 +1,30 @@
 #################### Deciv items ####################
 # Promotions
 Entrench = 참호
+## TODO: 더 나은 번역 필요
 Forage = 회수
 Skirmish = 산병전
 Shock = 충격
-Loose Formation = 산개 대형
-Hull Down = 헐 다운
+Loose Formation = 산개대형
+Hull Down = 헐다운
 Urban Warfare I = 시가전 I
 Urban Warfare II = 시가전 II
 Guerilla Warfare I = 유격전 I
 Guerilla Warfare II = 유격전 II
 Accuracy = 정확성
-Combat Drill = 전투 훈련
+Combat Drill = 전투훈련
 Evasion = 회피
-Strike =
-Bombardment =
-Targeting =
-Armor Plating =
-Flight Deck I =
-Flight Deck II =
-Flight Deck III =
-Wolfpack I =
-Wolfpack II =
-Wolfpack III =
+## TODO: 더 나은 번역 필요
+Strike = 강타
+Bombardment = 포격
+Targeting = 겨냥
+Armor Plating = 장갑
+Flight Deck I = 비행갑판 I
+Flight Deck II = 비행갑판 II
+Flight Deck III = 비행갑판 III
+Wolfpack I = 이리떼 I
+Wolfpack II = 이리떼 II
+Wolfpack III = 이리떼 III
 Siege I = 공성 I
 Siege II = 공성 II
 Siege III = 공성 III
@@ -32,61 +34,61 @@ Interception III = 요격 III
 Reconnaissance I = 정찰 I
 Reconnaissance II = 정찰 II
 Reconnaissance III = 정찰 III
-Smokescreen =
-Assault =
+Smokescreen = 연막
+Assault = 강습
 Pursuit = 추격
-Awe = 잔혹함
-Maneuver = 작전 행동
+Awe = 공포
+Maneuver = 기동
 Formation = 대형
 Ambush = 매복
 Precision = 정밀
-Suppression = 억압
-Barrage = 탄막 가스
+Suppression = 억제
+Barrage = 탄막
 Resupply = 재보급
 Mobility = 기동성
-Littoral Warfare =
-Exploit Weakness =
-Damage Control =
-Close-In Weapons System =
-Flank Speed =
-Convoy =
-Sentry =
-Blitz =
-March =
-Extended Range =
-Operational Range =
-Sortie =
-Evasive Maneuvers =
-Air Repair =
-Logistics =
+Littoral Warfare = 연안전
+Exploit Weakness = 약점공략
+Damage Control = 피해통제
+Close-In Weapons System = 근접방어무기체계
+Flank Speed = 전속력
+Convoy = 호위함
+Sentry = 보초
+Blitz = 전격
+March = 행군
+Extended Range = 사거리연장
+Operational Range = 작전반경
+Sortie = 출격
+Evasive Maneuvers = 회피기동
+Air Repair = 공중수리
+Logistics = 병참
 Medic I = 의무병 I
 Medic II = 의무병 II
-Drone Recon = 드론 정찰
-Drone Support = 드론 지원
+Drone Recon = 무인기정찰
+Drone Support = 무인기지원
 Care Package = 위문품
-Infantry Mortar = 보병 박격포
+Infantry Mortar = 보병박격포
 White Phosphorus Munitions = 백린탄
-Antipersonnel Mines = 대인 지뢰
-Antitank Missile = 대전차 지뢰
-Surface-to-Air Missile = 지대공 미사일
+Antipersonnel Mines = 대인지뢰
+Antitank Missile = 대전차지뢰
+Surface-to-Air Missile = 지대공미사일
 Cluster Munitions = 집속탄
 Napalm = 네이팜
-Antiship Missile = 대함 미사일
-Air-to-Air Missile = 공대공 미사일
-Infantry Weapons = 보병 무기
-Artillery =
-Advanced Weapons = 고급 무기
-Automated =
-Tear Gas = 최루 가스
-Chemical Weapons = 화학 무기
-Point Defense Laser = 국지 방어 레이저
-Rejuvenation =
-Amphibious =
+Antiship Missile = 대함미사일
+Air-to-Air Missile = 공대공미사일
+Infantry Weapons = 보병무기
+Artillery = 대포
+Advanced Weapons = 고급무기
+Automated = 자동화
+Tear Gas = 최루가스
+Chemical Weapons = 화학무기
+Point Defense Laser = 국지방어레이저
+Rejuvenation = 회춘
+Amphibious = 수륙양용
 Gas Mask = 방독면
-Headhunter =
-Raider =
-Clansman =
-Hazard =
+Headhunter = 인간사냥꾼
+Raider = 습격자
+Clansman = 조직원
+Hazard Pay = 위험수당
 
 # Resources
 Algae = 조류
