--- a/jsons/translations/Template.properties
+++ b/jsons/translations/Template.properties
@@ -590,7 +590,6 @@ Sunk Cost =
 Forbes =
 Cornucopia =
 
-
 Atlas =
 John Kruger =
 All that is required for the triumph of evil is for good men to do nothing. =
@@ -720,6 +719,34 @@ Tappan Farm =
 Skousen Ranch =
 30-50 Feral Hogs =
 
+Deadrock Clan =
+Boss Karl =
+You are mine! =
+As you were warned, if you dare mess with any one of us, you're messing with me, and my entire Clan! =
+You think this is over? You had better watch your back... =
+Greetings from the Deadrock Clan, and its Great Father Karl. Just a friendly reminder: Never touch our secrets, never mess with us, or you'll be dead in no time. =
+This is the encrypted channel of Deadrock Clan. =
+You're on our blacklist now. Think twice before you want to do anything with my Clan. =
+Let's talk about some business affairs. =
+Regulators =
+Gomorrah =
+Diamond City =
+Xanadu =
+The Den =
+Joker =
+Fortune =
+Golden Toad =
+Beaksville =
+Lucky 76 =
+Malachite =
+Horseshoe =
+Diablo Peak =
+Wildcard =
+Genting =
+House Rules =
+Loki =
+Straight Flush =
+
 Crimson Legion =
 Caesar =
 You have stood in the way of progress for too long. =
@@ -830,16 +857,15 @@ Ranger Center =
 The Hub =
 Have you ever danced with the devil in the pale moonlight? =
 
-
 # Eras
-Ancient era =
-Classical era =
-Medieval era =
-Renaissance era =
+Decivilized era =
+Rediscovering era =
+Neofeudal era =
+Rebuilding era =
 Industrial era =
-Modern era =
+Postmodern era =
 Information era =
-Future era =
+New Future era =
 
 # Techs
 Secrets of the Past =
@@ -883,4 +909,3 @@ Witness me! =
 # Unit Types
 Low Tech =
 Personnel =
-NBC Personnel =
