--- a/jsons/translations/Korean.properties
+++ b/jsons/translations/Korean.properties
@@ -1,3 +1,9 @@
+####################
+# Notice
+## 정책 가지 이름은 되도록 두 글자로 맞춥니다.
+## 나라 이름은 되도록 우리말로 번역하되, 도시 이름은 소리나는 대로 적습니다.
+####################
+
 #################### Deciv items ####################
 # Promotions
 Entrench = 참호
@@ -457,75 +463,75 @@ Altar of Ignis =
 
 # Policies
 Adaptation = 적응
-Castle Doctrine = 캐슬 독트린
-Centralization = 중앙화
+Castle Doctrine = 성의 원칙
+Centralization = 중앙 집권
 Differential Rationing = 차등 배급
 Planned Economy = 계획 경제
 Parallel Markets = 암시장
-Adaptation Complete = 적응 정책 완성
-Expansionism = 확장주의
-Restorers =
-Representation =
-Courier Service = 택배 서비스
-Reclaimers = 간척자
+Adaptation Complete = 적응 완성
+Expansionism = 확장
+Restorers = 복원
+Representation = 대의권
+Courier Service = 운반 서비스
+Reclaimers = 재개척
 Citizen Militia = 시민 의용군
-Expansionism Complete = 확장주의 정책 완성
-Sovereignty = 자주권
-Discipline =
-Doctrine = 원칙
-Autocracy =
-Military Tradition =
+Expansionism Complete = 확장 완성
+Sovereignty = 주권
+Discipline = 규율
+Doctrine = 교리
+Autocracy = 전제 정치
+Military Tradition = 군사 전통
 Triumph = 대승리
-Sovereignty Complete = 자주권 정책 완성
-Theocracy =
-Organized Religion =
-Mandate Of Heaven =
-Indulgences =
-God Emperor =
-Holy Scriptures =
-Theocracy Complete =
-Monopoly =
+Sovereignty Complete = 주권 완성
+Theocracy = 신정
+Organized Religion = 조직화된 종교
+Mandate Of Heaven = 천명
+Indulgences = 면죄부
+God Emperor = 신왕
+Holy Scriptures = 경전
+Theocracy Complete = 신정 완성
+Monopoly = 독점
 Mass Consumption = 대량 소비
 Venture Capital = 벤처 자본
 Privatization = 민영화
-Entrepreneurship =
+Entrepreneurship = 기업가 정신
 Corporate Personhood = 사단 법인
-Monopoly Complete =
-Constitution =
-Civil Society =
+Monopoly Complete = 독점 완성
+Constitution = 헌법
+Civil Society = 시민 사회
 Protected Speech = 표현의 자유
-Public Good = 공공재
+Public Good = 공익
 Legislative Process = 입법 절차
 Voting Rights = 투표권
-Constitution Complete = 헌법 정책 완료
+Constitution Complete = 헌법 완성
 Supremacy = 우월
-Militarism =
-Scorched Earth = 그을은 땅
-Police State =
-Total War =
+Militarism = 군국주의
+Scorched Earth = 초토화
+Police State = 경찰 국가
+Total War = 총력전
 Spoils of War = 전리품
-Supremacy Complete = 우월 정책 완성
-Collectivism =
-Re-Education =
-Nationalization = 국민화
-Political Officers =
-Shared Vision =
-Workers' Union =
-Collectivism Complete =
-Rationalism =
-Educated Elite =
-Skepticism =
-Equipment Upgrades =
+Supremacy Complete = 우월 완성
+Collectivism = 집산
+Re-Education = 재교육
+Nationalization = 국영화
+Political Officers = 정치 장교
+Shared Vision = 공유된 이상
+Workers' Union = 노동 조합
+Collectivism Complete = 집산 완성
+Rationalism = 합리
+Educated Elite = 엘리트 교육
+Skepticism = 회의주의
+Equipment Upgrades = 장비 강화
 Sample Analysis = 표본 통계
 Technocracy = 기술관료제
-Rationalism Complete =
+Rationalism Complete = 합리 완성
 
 # Specialists
 Administrator = 관리자
 Farmer = 농부
 
 # Nations
-Children of Rust = 쇳녹의 자녀들
+Children of Rust = 녹의 아이들
 Scarlett = 스칼렛
 Now you will reap what you have sown. = 이제 뿌린대로 거둘 시간입니다.
 We never expected that you could leave us to live in peace. Destruction is in your blood. = 당신네들이 우리를 평화롭게 둘것이라고 결코 생각하지 않았습니다. 당신의 피에 파괴가 흐르고 있군요.
@@ -534,32 +540,32 @@ So, you have returned! While the world died, what hole did you hide in? The citi
 I speak for the Children. = 저는 자녀들을 대표해서 말합니다.
 What will it take? When the last tree has burned and the last child has starved, will you then be satisfied, great leader? = 얼마나 더 필요합니까? 마지막 남은 나무가 불타고, 마지막 아이가 굶주렸을때, 그때서야 만족할 겁니까, "위대하신" 지도자님?
 This is the property now of the Children. What price will you pay? = 이것들은 우리 자녀들의 자산입니다. 당신은 어떤것을 줄 수 있습니까?
-Rubble Runners = 돌무더기 속의 주자
+Rubble Runners = 러블 러너즈
 Phoenix = 피닉스
 Rust City = 러스트 시티
-Ashtown = 애쉬타운
-Condor Creek = 콘도르 만
+Ashtown = 애시타운
+Condor Creek = 콘도르 크릭
 The Boneyard = 더 본야드
 Old Forest = 올드 포레스트
 Dogtown = 도그타운
-Soft Rains = 소프트 레인
-Hazard =
+Soft Rains = 소프트 레인즈
+Hazard = 해저드
 Rakeville = 레이크빌
-Osprey =
-Vulture Bend =
-Dark Skies =
-Pistolville =
-Headstone =
-Firesteel =
+Osprey = 오스프리
+Vulture Bend = 벌처 벤드
+Dark Skies = 다크 스카이즈
+Pistolville = 피스톨빌
+Headstone = 헤드스톤
+Firesteel = 파이어 스틸
 Broken Hills = 브로큰 힐즈
 Deadwood = 데드우드
-Hopeville =
-Buzzard Vista =
-Radium Springs =
+Hopeville = 호프빌
+Buzzard Vista = 버저드 비스타
+Radium Springs = 라디움 스프링즈
 Dustbowl = 더스트볼
-Rock Falls =
-Kismat =
-Waterville =
+Rock Falls = 록 폴즈
+Kismat = 키스맛
+Waterville = 워터빌
 
 Blackwarden = 블랙워든
 Ennis Zuckberger = 에니스 주커버그
@@ -624,7 +630,7 @@ Prometheus Laboratories =
 Zenith =
 Von Neumann Institute =
 
-Commonwealth = 커먼웰스 연합
+Commonwealth = 연방
 President Hawkins = 대통령 호킨스
 We must take action now, before it is too late. = 우리는 너무 늦기 전에 행동을 취해야만 합니다.
 You only repeat the mistakes of the past! = 당신만이 과거의 실수를 반복하지요!
@@ -722,6 +728,34 @@ Tappan Farm =
 Skousen Ranch =
 30-50 Feral Hogs =
 
+Deadrock Clan = 데드록 클랜
+Boss Karl = 두목 카를
+You are mine! =
+As you were warned, if you dare mess with any one of us, you're messing with me, and my entire Clan! =
+You think this is over? You had better watch your back... =
+Greetings from the Deadrock Clan, and its Great Father Karl. Just a friendly reminder: Never touch our secrets, never mess with us, or you'll be dead in no time. =
+This is the encrypted channel of Deadrock Clan. =
+You're on our blacklist now. Think twice before you want to do anything with my Clan. =
+Let's talk about some business affairs. =
+Regulators =
+Gomorrah =
+Diamond City =
+Xanadu =
+The Den =
+Joker =
+Fortune =
+Golden Toad =
+Beaksville =
+Lucky 76 =
+Malachite =
+Horseshoe =
+Diablo Peak =
+Wildcard =
+Genting =
+House Rules =
+Loki =
+Straight Flush =
+
 Crimson Legion = 핏빛 군단
 Caesar = 카이사르
 You have stood in the way of progress for too long. = 네놈은 진보의 길에 너무 오래동안 서있었다.
@@ -758,8 +792,8 @@ Corpus Vile =
 Canis Canem Edit =
 Ad Astra =
 
-Cult of Ignis =
-Ignitor Martina =
+Cult of Ignis = 이그니스 교단
+Ignitor Martina = 점화자 마르티나
 Rejoice! Your profane forms will soon become one with the Exhaust! =
 Your offering is welcome! We shall oxidize together in blessed combustion! =
 Though our worldly bodies fail, our spirits soar through the skies in oxides immortal... =
@@ -789,7 +823,7 @@ Court of Dreams =
 Death Race =
 God Box =
 
-The Mariners =
+The Mariners = 바닷사람들
 Deacon Hopper =
 Marine =
 The sea is ours, and all the dry lands shall soon be as well =
@@ -800,11 +834,11 @@ Greetings, land dweller. =
 What do you want? =
 We've got the finest goods that the sea can offer! What do you say? =
 
-The Archive =
+The Archive = 기록보관소
 We shall not go gentle into that good night! =
 After us, the deluge... =
 
-Order of Jerome = 제롬의 질서
+Order of Jerome = 제롬 기사단
 May you be forgiven. = 당신이 용서 되길
 There is still time... Brother = 아직도 시간은 있습니다... 형제여...
 
@@ -812,36 +846,35 @@ Bartertown = 바터타운
 Two men enter, one man leaves! =
 You run Bartertown. =
 
-Arroyo =
+Arroyo = 아로요
 Tribe =
 We go to join the ancestors. =
 
-Ghost Mountain =
+Ghost Mountain = 유령의 산
 Ghost Warriors =
 The spirits will fight at our sides. =
 
-Alma Base =
+Alma Base = 알마 기지
 Gun Runners =
 
-Jericho =
+Jericho = 예리코
 Freeholders =
 
 Rangers =
 Ranger Center =
 
-The Hub =
+The Hub = 허브
 Have you ever danced with the devil in the pale moonlight? =
 
-
 # Eras
-Ancient era =
-Classical era =
-Medieval era =
-Renaissance era =
-Industrial era =
-Modern era =
-Information era =
-Future era =
+Decivilized era = 비문명 시대
+Rediscovering era = 재발견 시대
+Neofeudal era = 신봉건 시대
+Rebuilding era = 재건 시대
+Industrial era = 산업 시대
+Postmodern era = 탈근대 시대
+Information era = 정보화 시대
+New Future era = 신미래 시대
 
 # Techs
 Secrets of the Past = 과거의 비밀
@@ -883,6 +916,5 @@ Heals [amount] damage if it kills an Unit = 유닛을 사살했을 경우 [amoun
 Witness me! =
 
 # Unit Types
-Low Tech = 저차원 기술
-Personnel =
-NBC Personnel =
+Low Tech = 저급 기술
+Personnel = 병력
