--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -497,7 +497,7 @@ Operations Center = 行动总部
 Fish Farm = 养鱼场
 Seastead = 海上家园（在任何国家管辖范围之外的海域建造的永久住宅）
 Shrine = 神殿
-Ocean Seeder =
+Ocean Seeder = 海洋撒种机
 Monastery = 修道院
 Pyramid = 金字塔
 Garden = 花园
@@ -514,40 +514,63 @@ Parallel Markets = 平行化市场
 Adaptation Complete = 完整的适应政策
 Expansionism = 扩张政策
 Restorers = 拓荒者
+Representation =
+Courier Service =
 Reclaimers = 开垦者
 Citizen Militia = 公民警卫军
-Courier Service = 跨城邮政
 Expansionism Complete = 完整的扩张政策
-Spoils of War = 战利品
+Sovereignty = 独裁政策
+Discipline = 军事自律
 Doctrine = 军事准则
+Autocracy = 专制政治
+Military Tradition = 军事传统
 Triumph = 军事荣耀
 Sovereignty Complete = 完整的主权政策
-Emission Standards = 排放标准
-Sample Analysis = 水质样本分析
-Technocracy = 专家统治
-Privatization = 私有化
-Venture Capital = 风险投资
+Theocracy = 神权政策
+Organized Religion = 组织宗教
+Mandate Of Heaven = 天命思想
+Indulgences = 赎罪券出售
+God Emperor = 君王神化
+Holy Scriptures = 魔幻圣典
+Theocracy Complete = 完整的神权政策
+Monopoly = 垄断政策
 Mass Consumption = 广泛消费
+Venture Capital = 风险投资
+Privatization = 私营化
+Entrepreneurship = 创业精神
 Corporate Personhood = 企业法人化
+Monopoly Complete = 完整的垄断政策
+Constitution = 宪法编写
+Civil Society = 民间团体
 Protected Speech = 言论自由
 Public Good = 公共福利
 Legislative Process = 立法程序
 Voting Rights = 公民投票权
 Constitution Complete = 完整的宪治政策
-Legacy = 遗产政策
-Special Projects = 特殊化工程
-Nationalization = 国有化
-Inheritance = 传承精神
-Endurance Programme = 永恒计划
-Unity = 群体精神
-Birthright = 出生权
-Legacy Complete = 完整的遗产政策
 Supremacy = 优势政策
+Militarism = 军国主义
 Scorched Earth = 焦土策略
+Police State =
+Total War = 全面战争
+Spoils of War =
 Supremacy Complete = 完整的优势政策
 Vision = 视野
-Commerce Complete = 完整的垄断政策
-Commerce = 垄断政策
+Commerce Complete = 完整的商业政策
+Commerce = 商业政策
+Collectivism = 集体政策
+Re-Education = 再教育
+Nationalization = 国有化
+Political Officers =
+Shared Vision = “命运共同体”
+Workers' Union = 工会建立
+Collectivism Complete = 完整的集体政策
+Rationalism = 理性政策
+Educated Elite = 精英教育
+Skepticism = 怀疑主义
+Equipment Upgrades =
+Sample Analysis = 抽样调查
+Technocracy = 技术统治
+Rationalism Complete = 完整的理性政策
 
 # Specialists
 Administrator = 城督
