Add New Africa to template.properties & others
Add New Africa and Marieners' cities

--- a/jsons/translations/Template.properties
+++ b/jsons/translations/Template.properties
@@ -824,6 +824,69 @@ Ahoy! We are the Mariners, and we've come to reclaim the dry land from the lot o
 Greetings, land dweller. = 
 What do you want? = 
 We've got the finest goods that the sea can offer! What do you say? = 
+Dryplace =
+Everest Peak =
+Tripplehorn Harbor =
+Coates Beach =
+LaSardo Coast =
+Mokae Pier = 
+Kazann Port = 
+Shimono Harbor =
+Aviles Beach =
+Kehler Coast =
+Douridas Pier =
+Silverman Port =
+Giuntoli Bay = 
+Whalen Cove =
+Arenberg Fjord =
+
+New Afrika =
+Mutulu Makonnen =
+Afrikan =
+We've had enough of you messing with us. =
+You think you can defeat us? Fool! =
+This is the end. Freedom will never be more than a dream. =
+I am Mutulu, and we are New Afrika. We are here to rebuild this broken world. =
+Greetings. =
+What the hell do you want? =
+Let's make a fair trade, as equals. =
+Community Watch =
+Gao =
+Tombouctu =
+Jenne =
+Taghaza =
+Tondibi =
+Kumbi Saleh =
+Kukia =
+Addis Ababa =
+Harar =
+Adwa =
+Lalibela =
+Gondar =
+Walata =
+Tegdaoust =
+Argungu =
+Gwandu =
+Kebbi =
+Boussa =
+Thebes =
+Memphis =
+Heliopolis =
+Elephantine =
+Alexandria =
+Axum =
+Dire Dawa =
+Bahir Dar =
+Adama =
+Mek'ele =
+Awasa =
+Jimma =
+Jijiga =
+Dessie =
+Debre Berhan =
+Pi-Ramesses =
+Giza =
+Byblos =
 
 The Archive =
 We shall not go gentle into that good night! =
