--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -247,7 +247,7 @@ Salvage Helicopter = Restaurar Helicoptero
 Ally with Isolationists = Aliarse con los Aislados
 Annex Isolationists = Anexionarse a los Aislados
 Faust Project = Proyecto Fausto
-Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... = Las leyendas cuentan sobre armas, usadas por los reyes de antaño; creadas por magos malvados, de usarlas profano...
+Our legends tell of weapons, wielded by kings of old; crafted by evil wizards, unholy to behold... = Las leyendas cuentan sobre armas, usadas por los reyes de antaño; creadas por magos malvados, pecado es de mirarlo...
 Nuclear Waste Museum = Museo de Desechos Nucleares
 Excavate Nuclear Waste = Excavar Desecho Nuclear
 Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. = Enviar este mensaje era importante para nosotros.\nNos considerabamos como una cultura importante.\nEste lugar no es uno de honor... ningúna hazaña importante es conmemorada aquí.\nLo que hay aquí es agresivo y repulsivo hacia nosotros.\nEste mensaje es una advertencia sobre el peligro.\nEl peligro sigue presente, en tu tiempo, como lo fué en el nuestro.
@@ -352,66 +352,64 @@ Arcology Food = Comida Arcológica
 Arcology Dome = Domo Arcológico
 Arcology Reprocessor = Reprocesador Arcológica
 Cryo Sanctum = Santuario Criogénico
-Cryo Vault A =
-Cryo Vault B =
-Cryo Vault C =
-Cryo Bunker =
-Fish Farm =
-Ocean Seeder =
-Archive of the Arts =
-Nuclear Storage =
-Devil's Nuclear Plant =
-Paradise Alley =
-Encylopedia =
-The Abbey =
-Alma Army Depot =
-Ranch =
-Chemical Weapons Laboratory =
-Homestead =
-Silk Road =
-Divine Knowledge =
-Arroyo =
-Ghost Mountain =
-Traditional Farming Methods =
-Alma Air Base =
-Alma Tank Depot =
-Hub Monument =
-Trader's Hub =
-Hub Notfactory =
-Hub Work Camp =
-Mormon Monument =
-Grand Temple =
-Iron Rod Monument =
-Iron Rod Stockpile =
-Arden Monument =
-Land Value Tax =
-Salvage Tank Depot =
-Salvage Bomber =
-Salvage Helicopter =
-Alma Oil Depot =
-Hardened Defenses =
-Choke Points =
-Hardened Defenses =
-Active Denial System =
-Bunker =
-Battery =
-Machinery Production Line =
-Armor Production Line =
-Armament Production Line =
-Military School =
-Ground Control Center =
-Survey Center =
-Operations Center =
+Cryo Vault A = Bóveda Criogénica A
+Cryo Vault B = Bóveda Criogénica B
+Cryo Vault C = Bóveda Criogénica C
+Cryo Bunker = Bunquer Criogénico
+Fish Farm = Granja de Peces
+Ocean Seeder = Semillero Oceanico
+Archive of the Arts = Archivo de las Artes
+Nuclear Storage = Almacén Nuclear
+Devil's Nuclear Plant = Planta Nuclear del Diablo
+Paradise Alley = Callejón Paraiso
+Encylopedia = Enciclopedia
+The Abbey = La Abadía
+Alma Army Depot = Almecén del Ejercito de Alma
+Ranch = Rancho
+Chemical Weapons Laboratory = Laboratorio de Armas Quimicas
+Homestead = Finca
+Silk Road = Ruta de la Seda
+Divine Knowledge = Conocimiento Divino
+Arroyo = Arroyo
+Ghost Mountain = Montaña Fantásma
+Traditional Farming Methods = Metodos de Agricultura Tradicional
+Alma Air Base = Base Aerea de Alma
+Alma Tank Depot = Almacén de Tanques de Alma
+Hub Monument = Monumento a la Central
+Trader's Hub = Central de Comerciantes
+Hub Notfactory = Central de Nofabrica
+Hub Work Camp = Central de Campos de Trabajo
+Mormon Monument = Monumento Mormón
+Grand Temple = Gran Templo
+Iron Rod Monument = Monumento de la Vara de Hierro
+Iron Rod Stockpile = Reservas de Vara de Hierro
+Arden Monument = Monumento Arden
+Land Value Tax = Impuesto por Valor de Tierra
+Salvage Tank Depot = Restaurar Almacén de Tanques
+Salvage Bomber = Restaurar Bombardero
+Salvage Helicopter = Restaurar Helicoptero
+Alma Oil Depot = Almecén de Petroleo de Alma
+Hardened Defenses = Defensas Endurecidas
+Choke Points = Cuellos de Botella
+Bunker = Bunquer
+Battery = Batería
+Machinery Production Line = Línea de Producción de Mecánica
+Armor Production Line = Línea de Producción de Armaduras
+Armament Production Line = Línea de Producción de Armamento
+Military School = Escuela Militar
+Ground Control Center = Centro de Control Terrestre
+Survey Center = Centro de Sondeo
+Operations Center = Centro de Operaciones
 
-Fish Farm = Piscifactorías
-Seastead = 
-Shrine = 
-Ocean Seeder =
-Monastery =
-Pyramid =
-Garden =
-Holy Fortress =
-Altar of Ignis =
+Fish Farm = Granja d Peces
+Seastead = Casa de playa
+Shrine = Santuario
+Ocean Seeder = Semillero Oceanico
+Monastery = Monasterio
+Pyramid = Pirámide
+Garden = Jardín
+Holy Fortress = Fortaleza Santa
+Altar of Ignis = Altar de Ignea
 
 # Policies
 Adaptation = Adaptación
@@ -695,77 +693,77 @@ Ad Astra =
 
 Cult of Ignis = Culto de Ígneos
 Ignitor Martina = Ígnea Martina
-Rejoice! Your profane forms will soon become one with the Exhaust! =
-Your offering is welcome! We shall oxidize together in blessed combustion! =
-Though our worldly bodies fail, our spirits soar through the skies in oxides immortal... =
-The sybil has foreseen this meeting! I am Martina, Ignitor and High Priest. I serve the Divine Engine, and so too shall you. =
-In the name of the trinity, I permit your words be heard. =
-Before the fall, Air, Fuel and the Holy Ignition were worshipped in blessed trinity. But the apostates turned away from them, and were struck down; as shall be all who cannot see the truth. =
-You may yet serve the Engine... =
+Rejoice! Your profane forms will soon become one with the Exhaust! = ¡Regocijencen! Sus formas profanas pronto serán una con el Agotado
+Your offering is welcome! We shall oxidize together in blessed combustion! = ¡Tu oferta es bienvenida! ¡Que nos oxidemos juntos en la bendita combustión!
+Though our worldly bodies fail, our spirits soar through the skies in oxides immortal... = Aunque nuestros cuerpos terrenales fallan, nuestros espiritus vuelan por los cielos en oxidos inmortales
+The sybil has foreseen this meeting! I am Martina, Ignitor and High Priest. I serve the Divine Engine, and so too shall you. = ¡El Síbil ha predicho esta reunión! Soy Martina, Ignea y Gran Sacerdota. Sirvo al Motor Divino, y tu también lo harás.
+In the name of the trinity, I permit your words be heard. = En el nombre de la trinidad, doy permiso a escuchar tus palabras.
+Before the fall, Air, Fuel and the Holy Ignition were worshipped in blessed trinity. But the apostates turned away from them, and were struck down; as shall be all who cannot see the truth. = Antes de la caída, Aire, Combustible y la Santa Ignición eran adoradas en bendita trinidad. Pero los apostatas se alejaron de ellos, y fuero abatidos; como debe ser a todos los que no pueden ver la verdad.
+You may yet serve the Engine... = Aún estás por servir al Motor...
 Road Warriors = Guerreros de Carretera
 The Sanctum = El Santuario
-Gastown =
-Blood Farm =
-Immortal Highway =
-Trial of Sand =
-Hell Patrol =
-Thousand Cuts =
-The Harrowing =
-Tohuvabohu =
-Traitors' Gate =
-Prophecy =
-The Cauldron =
-Steel Throne =
-The Warren =
-Well of Souls =
-Perpetual Ascension =
-Ceremony =
-Court of Dreams =
-Death Race =
-God Box =
+Gastown = Pueblogas
+Blood Farm = Granja de Sangre
+Immortal Highway = Carretera Inmortal
+Trial of Sand = Juicio de Arens
+Hell Patrol = Patrulla Infernal
+Thousand Cuts = Mil Cortes
+The Harrowing = El Desgarrador
+Tohuvabohu = Tojuvaboju
+Traitors' Gate = Puerta de los Traidores
+Prophecy = Profecía
+The Cauldron = El Calderón
+Steel Throne = Trono de Acero
+The Warren = La Madriguera
+Well of Souls = Bien de las Almas
+Perpetual Ascension = Asención Perpetua
+Ceremony = Ceremonia
+Court of Dreams = La Corte de los Sueños
+Death Race = Carrera de Muerte
+God Box = Caja de Dios
 
 The Mariners = Los Marineros
 Deacon Hopper = Deacon Hopper
 Marine = Marino
-The sea is ours, and all the dry lands shall soon be as well = 
-Ha! You think to challenge us? I hope you can swim well = 
-Damn you! We should never have left the protection of the sea. = 
-Ahoy! We are the Mariners, and we've come to reclaim the dry land from the lot of you. = 
-Greetings, land dweller. = 
-What do you want? = 
-We've got the finest goods that the sea can offer! What do you say? = 
+The sea is ours, and all the dry lands shall soon be as well = El mar es nuestro, y toda la tierra seca también lo será
+Ha! You think to challenge us? I hope you can swim well = ¡Ja! ¿Te atreves a retarnos? Espero que sepas nadar, jajaja
+Damn you! We should never have left the protection of the sea. = ¡Maldito seas! Nunca debimos alejarnos de la protección del mar.
+Ahoy! We are the Mariners, and we've come to reclaim the dry land from the lot of you. = ¡Ajoy! Somos los Marineros, y hemos venido a reclamar la tierra seca de todos vosotros.
+Greetings, land dweller. = Saludos, habitante terrestre.
+What do you want? = ¿Que es lo que quieres?
+We've got the finest goods that the sea can offer! What do you say? = ¡Tenemos los mejores bienes que tiene el mar para ofrecer! ¿Que dices?
 
 The Archive = El Archivo
-We shall not go gentle into that good night! =
-After us, the deluge... =
+We shall not go gentle into that good night! = ¡No seremos gentiles en esta buena noche!
+After us, the deluge... = Después de nosotros, el abrumo...
 
 Order of Jerome = La Órden de Jeronimo
-May you be forgiven. =
-There is still time... Brother =
+May you be forgiven. = Que Dios te perdone.
+There is still time... Brother = Aún no és tarde... Hermano
 
 Bartertown = Pueblotrueque
-Two men enter, one man leaves! =
-You run Bartertown. =
+Two men enter, one man leaves! = ¡Dos hombres entran, solo uno sale!
+You run Bartertown. = Ahora tu manejas Pueblotrueque
 
 Arroyo = Arroyo
-Tribe =
-We go to join the ancestors. =
+Tribe = Tribu
+We go to join the ancestors. = Nos vamos a reunir con nuestros ancestros.
 
 Ghost Mountain = Montaña Fantasma
-Ghost Warriors =
-The spirits will fight at our sides. =
+Ghost Warriors = Guerreros Fantásma
+The spirits will fight at our sides. = Los espiritus pelean a nuestros lados.
 
 Alma Base = Base Alma
-Gun Runners =
+Gun Runners = Corredores Armados
 
 Jericho = Jericó
-Freeholders =
+Freeholders = Soberanos
 
 Rangers = Comandos
-Ranger Center =
+Ranger Center = Centro de Comandos
 
-The Hub = El Centro
-Have you ever danced with the devil in the pale moonlight? =
+The Hub = La Central
+Have you ever danced with the devil in the pale moonlight? = ¿Haz alguna vez bailado con el diablo a luz de la luna?
 
 
 # Eras
