Big push to version 7

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -22,7 +22,7 @@ We have captured a barbarian encampment and recovered [goldAmount] gold! = We ha
 
 Received [goldAmount] Gold for capturing [cityName] = Received [goldAmount] Water for capturing [cityName]
 
-Barbarians raided [cityName] and stole [amount] Gold from your treasury! = Barbarians raided [cityName] and stole [amount] Water from your treasury!
+Barbarians raided [cityName] and stole [amount] Gold from your treasury! = Barbarians raided [cityName] and stole [amount] Water from you!
 
 [building] has provided [amount] Gold! = [building] has provided [amount] Water!
 
@@ -38,8 +38,6 @@ Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Wou
 
 Sell for [sellAmount] gold = Sell for [sellAmount] water
 
-Convert production to gold at a rate of 4 to 1 = Convert production to water at a rate of 4 to 1
-
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Your trade mission to [civName] has earned you [goldAmount] water and [influenceAmount] influence!
 
 Puppeted cities also generate 25% less Gold and Science. = Puppeted cities also generate 25% less Water and Science.
@@ -50,23 +48,17 @@ Provides a sum of gold each time you spend a Great Person = Provides a sum of wa
 
 Doubles Gold given to enemy if city is captured = Doubles Water given to enemy if city is captured
 
--[amount]% Gold cost of acquiring tiles [cityFilter] = -[amount]% Water cost of acquiring tiles [cityFilter]
-
-Gold from all trade routes +25% = Water from all trade routes +25%
-
-[amount]% Gold cost of upgrading [unitType] units = [amount]% Water cost of upgrading [unitType] units
+[amount]% Gold cost of acquiring tiles [cityFilter] = [amount]% Water cost of acquiring tiles [cityFilter]
 
 [amount]% Gold cost of upgrading = [amount]% Water cost of upgrading
 
-[amount]% Gold from Great Merchant trade missions = [amount]% Water from Great Merchant trade missions
+[relativeAmount]% Gold from Great Merchant trade missions = [relativeAmount]% Water from Great Merchant trade missions
 
-67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment = 67% chance to earn 25 Water and recruit a Barbarian unit from a conquered encampment
+When conquering an encampment, earn [amount] Gold and recruit a Barbarian unit = When conquering an encampment, earn [amount] Water and recruit a Barbarian unit
 
-50% chance of capturing defeated Barbarian naval units and earning 25 Gold = 50% chance of capturing defeated Barbarian naval units and earning 25 Water
+When defeating a [mapUnitFilter] unit, earn [amount] Gold and recruit it = When defeating a [mapUnitFilter] unit, earn [amount] Water and recruit it
 
 Receive triple Gold from Barbarian encampments and pillaging Cities = Receive triple Water from Barbarian encampments and pillaging Cities
-
-Enables conversion of city production to gold = Enables conversion of city production to water
 
 Can undertake a trade mission with City-State, giving a large sum of gold and [amount] Influence = Can undertake a trade mission with City-State, giving a large sum of water and [amount] Influence
 
@@ -82,6 +74,10 @@ Costs [amount] gold per turn when in your territory = Costs [amount] water per t
 
 Can spend Gold to annex or puppet a City-State that has been your ally for [amount] turns. = Can spend Water to annex or puppet a City-State that has been your ally for [amount] turns.
 
+Gifts of Gold to City-States generate [relativeAmount]% more Influence = Gifts of Water to City-States generate [relativeAmount]% more Influence
+
+[relativeAmount]% Gold from Great Merchant trade missions = [relativeAmount]% Water from Great Merchant trade missions
+
 # isolated island
 # can't have bonuses for other natural wonders - sorry, Spain
 
@@ -95,12 +91,6 @@ Find Natural Wonder = Find Ancient Wonder
 
 # terrains
 
-Grassland = Wasteland
-
-Plains = Badlands
-
-Snow = Permafrost
-
 Provides a one-time Production bonus to the closest city when cut down = Provides a one-time Production bonus to the closest city when cleared
 
 Clearing a [forest] has created [amount] Production for [cityName] = Clearing the [forest] has created [amount] Production for [cityName]
@@ -109,13 +99,9 @@ Forest = Rubble
 
 Jungle = Ruins
 
-Marsh = Toxic Waste
-
 Remove Forest = Remove Rubble
 
 Remove Jungle = Remove Ruins
-
-Remove Marsh = Remove Toxic Waste
 
 Ancient ruins = Survivor camp
 
@@ -139,30 +125,6 @@ May not generate great prophet equivalents naturally = May not generate great sa
 
 Gain enough Faith for [amount]% of a Great Prophet = Gain enough Faith for [amount]% of a Great Sage
 
-Hidden after generating a Great Prophet = Hidden after generating a Great sage
+Hidden after generating a Great Prophet = Hidden after generating a Great Sage
 
 [amount]% Faith cost of generating Great Prophet equivalents = [amount]% Faith cost of generating Great Sage equivalents
-
-# Scientific victory
-
-Complete all the spaceship parts\n to win! = Complete all the terraformer parts\n to win!
-
-Spaceship parts remaining = Terraformer parts remaining
-
-Spaceship part = Terraformer part
-
-SS Booster = Solar Shade
-
-Enables construction of Spaceship parts = Enables construction of Terraformer parts
-
-Built Apollo Program = Built Biosphere Project
-
-Apollo project not built! = Biosphere Project not built!
-
-SS Cockpit = Terraforming Lab
-
-SS Engine = Ocean Scrubber
-
-SS Stasis Chamber = Atmosphere Processor
-
-You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
